@@ -43,6 +43,8 @@ Bugfixes:
   received (Jira APPSERVER-35)
 - the "http.host" setting from "red5.properties" is evaluated
   (Jira APPSERVER-36)
+- "IBroadcastStream" knows about the filename it is being recorded to
+  (Jira APPSERVER-30)
 
 
 Red5 0.6rc1 (2006-10-30)
